tests/fail/unexpected_semicolon.llcl
/*
error: unexpected separator: ';'
9  |function main(): Int8 {
10 |    ;
        ^
11 |}
*/

function main(): Int8 {
	;
}